Add a disclaimer in the end of pages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,10 @@
 
         <div id="page-body" class="container">{{{body}}}</div>
 
+        <div class="container text-right edu-disclaimer">
+            <strong>Disclaimer</strong> This site hosted for education purpose only.</small>
+        </div>
+
         <script id="cart-detail-tpl" type="text/x-handlebars-template">
             {{!-- before context-parser-handlebars:
             <table class="table">
