--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,3 +155,8 @@ tr.order-items img {
     margin-left: auto;
     margin-right: auto;
 }
+
+.edu-disclaimer {
+    font-size: 10px;
+    margin-top: 50px;
+}
